[package]
name = "blist"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[workspace]
members = [
    "converter",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
constant_time_eq = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zip = { version = "0.5", default-features = false, features = ["deflate", "time"] }
