[package]
name = "blist_converter"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.28"
blist = { path = ".." }
base64 = "0.12.0"
chrono = { version = "0.4.11", features = ["serde"] }
constant_time_eq = "0.1.5"
glob = "0.3.0"
rayon = "1.3.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
structopt = "0.3.13"
